# batchchef-

./: .gitignore  CLAUDE.md  CONVERSATION_DISPATCH.md  HANDOFF.md  HANDOFF_PRICING_PIPELINE.md  README.md  RESTART.md  docker-compose.yml  start.ps1  stop.ps1
backend/: .env.example  Dockerfile  batchchef.db.bak  celerybeat-schedule-shm  celerybeat-schedule-wal  dashboard.py  pyproject.toml  supervisor.py
backend/alembic/: env.py
backend/alembic/versions/: 61bc335b03d5_initial.py  a3c7d1e2f4b5_ingredient_parent_hierarchy.py  b2c3d4e5f6a7_add_is_taxable.py  b7c8d9e0f1a2_ingredient_pricing_pipeline.py  c3d4e5f6a7b8_add_image_url_to_store_product.py  e533acb00b56_add_user_auth.py  f1a2b3c4d5e6_sprint2_cancel_and_price_mapping.py
backend/app/: alembic_setup.md  auth.py  config.py  database.py  enums.py  main.py
backend/app/ai/: classifier.py  client.py  display_name_cleaner.py  name_cleaner.py  price_estimator.py  receipt_ocr.py  standardizer.py  utils.py
backend/app/models/: __init__.py  batch.py  ingredient.py  inventory.py  job.py  meal_plan.py  receipt.py  recipe.py  store.py  user.py
backend/app/routers/: admin.py  auth.py  batches.py  chef.py  imports.py  inventory.py  (+7 more)
backend/scripts/: audit_canonical_hierarchy.py  build_canonical_hierarchy.py  capture_costco_graphql.py  capture_costco_xhr.py  categorize_and_query.py  demo_pricing_end_to_end.py  deterministic_cluster.py  dump_costco_search_html.py  finalize_v3.py  find_maxi_store.py  find_maxi_store_api.py  fix_unite_format.py  inspect_maxi_store.py  merge_duplicate_parents.py  migrate_canonical_names.py  probe_costco_search_html.py  test_maxi_search.py  update_maxi_store_id.py
backend/tests/: conftest.py  debug_maxi_extract.py  debug_maxi_final.py  debug_maxi_html.py  debug_maxi_network.py  debug_maxi_playwright.py  debug_pcx_api.py  debug_relevance.py  test_batch_generator.py  test_cancel_import.py  test_inventory_manager.py  test_maxi_scraper.py  test_maxi_v2.py
(+137 files in other folders)
